@@ -2,14 +2,13 @@ package cbs.dsl.api;
 
 import cbs.dsl.api.ConditionFunction.ConditionArg;
 import cbs.dsl.api.ConditionFunction.ConditionResult;
-import cbs.dsl.api.context.ConditionContext;
 import java.util.Collections;
 import java.util.Map;
 
 @FunctionalInterface
 public interface ConditionFunction<I extends ConditionArg, O extends ConditionResult> {
 
-  ConditionContext<O> check(ConditionContext<I> input);
+  O check(I input);
 
   interface ConditionArg extends DslPayload {}
 
@@ -20,7 +19,7 @@ public interface ConditionFunction<I extends ConditionArg, O extends ConditionRe
 
     @Override
     default Map<String, Object> params() {
-      return Collections.emptyMap();
+      return Map.of("value", getValue());
     }
 
   }
